# karp-backend

./: .bumpversion.cfg  .coveragerc  .env.ci  .gitignore  .pylintrc  .pyre_configuration  404.html  CHANGELOG.md  Dockerfile  Justfile  Makefile  Pipfile  README.md  alembic.ini  asgi.py  codecov.yml  config.py  docker-compose.yml  index.html  mypy.ini  pylintrc  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  ruff.toml  run.py  setup.cfg  setup.py  sitemap.xml  test_plugins.py  tox.ini  wsgi.py
karp-backend/: .bumpversion.cfg  .coveragerc  Justfile  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
karp-backend/src/karp/: entry_commands.py  resource_commands.py  search_commands.py
karp-backend/src/karp/auth/: __init__.py
karp-backend/src/karp/auth/application/queries/: __init__.py  resources.py
karp-backend/src/karp/auth/domain/: auth_service.py  errors.py
karp-backend/src/karp/auth/domain/entities/: user.py
karp-backend/src/karp/auth/domain/value_objects/: __init__.py
karp-backend/src/karp/auth_infrastructure/: __init__.py
karp-backend/src/karp/auth_infrastructure/queries/: __init__.py  lex_resources.py
karp-backend/src/karp/auth_infrastructure/services/: __init__.py  dummy_auth_service.py  jwt_auth_service.py
karp-backend/src/karp/cliapp/: main.py  utility.py
karp-backend/src/karp/cliapp/subapps/: __init__.py  database_subapp.py  entries_subapp.py  entry_repo_subapp.py  query_subapp.py  resource_subapp.py
karp-backend/src/karp/command_bus/: __init__.py  core.py
karp-backend/src/karp/containers/: __init__.py  container.py
karp-backend/src/karp/db_infrastructure/: __init__.py  db.py  sql_repository.py  sql_unit_of_work.py  tasks.py
karp-backend/src/karp/db_infrastructure/types/: __init__.py  ulid.py
karp-backend/src/karp/foundation/: cache.py  constraints.py  entity.py  environs_sqlalchemyurl.py  errors.py  events.py  messagebus.py  repository.py  text_manipulations.py  time.py  timings.py  unit_of_work.py
karp-backend/src/karp/foundation/value_objects/: __init__.py  machine_name.py  unique_id.py
karp-backend/src/karp/karp_v6_api/: __init__.py  main.py  schemas.py  tasks.py  workers.py
karp-backend/src/karp/karp_v6_api/contrib/: __init__.py  matomo.py
karp-backend/src/karp/karp_v6_api/dependencies/: __init__.py  auth_deps.py  db_deps.py  event_deps.py  fastapi_injector.py  lex_deps.py
karp-backend/src/karp/karp_v6_api/routes/: __init__.py  entries_api.py  health_api.py  history_api.py  query_api.py  resources_api.py  stats_api.py
karp-backend/src/karp/lex/: __init__.py
karp-backend/src/karp/lex/application/dtos/: base.py  resource_dto.py
karp-backend/src/karp/lex/application/queries/: __init__.py  entries.py  entry_repos.py  network.py  resources.py
karp-backend/src/karp/lex/application/repositories/: __init__.py  entries.py  entry_repositories.py  generators.py  resources.py
karp-backend/src/karp/lex/domain/: constraints.py  errors.py
karp-backend/src/karp/lex_infrastructure/: __init__.py
karp-backend/src/karp/lex_infrastructure/queries/: __init__.py  base.py  entries.py  entry_repos.py  generic_entries.py  generic_network.py  generic_resources.py  resources.py
karp-backend/src/karp/lex_infrastructure/repositories/: __init__.py  sql_entries.py  sql_entry_uows.py  sql_resources.py
karp-backend/src/karp/lex_infrastructure/sql/: __init__.py  sql_models.py
karp-backend/src/karp/main/: __init__.py  bootstrap.py  config.py  errors.py  modules.py  pluginmanager.py
karp-backend/src/karp/main/migrations/: env.py  use_cases.py
karp-backend/src/karp/search/: __init__.py  generic_resources.py
karp-backend/src/karp/search/application/: use_cases.py
karp-backend/src/karp/search/domain/: commands.py  errors.py  query.py
karp-backend/src/karp/search_infrastructure/: __init__.py
karp-backend/src/karp/search_infrastructure/elasticsearch6/: __init__.py  es_config.py  es_mapping_repo.py
karp-backend/src/karp/search_infrastructure/queries/: __init__.py  es6_search_service.py  es_query.py  generic_entries.py  generic_resources.py  generic_search_query.py  generic_search_service.py
karp-backend/src/karp/search_infrastructure/repositories/: __init__.py  es6_indicies.py  noop_indicies.py  sql_search_service.py  unit_of_work.py
karp-backend/src/karp/search_infrastructure/transformers/: __init__.py  generic_entry_transformer.py  generic_pre_processor.py
karp-backend/src/karp/tests/: conftest.py  factories.py  utils.py
karp-backend/src/karp/tests/e2e/: conftest.py  test_cliapp_main.py  test_entries_api.py  test_health_api.py  test_history_api.py  test_query_api.py  test_query_api_input.py  test_resources_api.py  test_stats_api.py
karp-backend/src/karp/tests/foundation/: adapters.py
karp-backend/src/karp/tests/integration/: adapters.py  conftest.py  test_jwt_auth_service.py  test_sql_entries_uow.py  test_sql_entry_repository.py  test_sql_entry_uow_repository.py  test_sql_resource_repository.py  test_sql_uow.py
karp-backend/src/karp/tests/unit/: test_entry_query.py  test_json_schema.py  test_morphological_entry.py
karp-backend/src/karp/texts/: __init__.py
karp-backend/src/karp/timings/: __init__.py
karp-backend/src/karp/utility/: container.py  json_schema.py  text.py
karp-lex-core/: .bumpversion.cfg  .coveragerc  CHANGELOG.md  Justfile  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
karp-lex-core/src/karp/lex_core/: __init__.py  alias_generators.py
karp-lex-core/src/karp/lex_core/commands/: __init__.py  base.py  entry_commands.py  entry_repo_commands.py  resource_commands.py
karp-lex-core/src/karp/lex_core/dtos/: __init__.py  entry_dto.py
karp-lex-core/src/karp/lex_core/tests/: entry_dto_unit_test.py  test_command_tags.py  test_entry_repo_commands.py  test_generic_commands.py  test_resource_commands.py  test_unique_id.py
karp-lex-core/src/karp/lex_core/value_objects/: __init__.py  unique_id.py
projects/karp-backend/: .bumpversion.cfg  Justfile  README.md  pyproject.toml
projects/karp-lex-core/: .bumpversion.cfg  Justfile  README.md  pyproject.toml
(+1135 files in other folders)
