[project]
name = "karp"
version = "7.0.0"
license = "MIT"
description = "Karp backend"
readme = "README.md"
authors = [{ name = "Språkbanken Text", email = "sb-info@svenska.gu.se" }]
requires-python = ">=3.12"

dependencies = [
    "PyMySQL==1.1.0",
    "TatSu==5.7.4",
    "alembic==1.13.1",
    "asgi-correlation-id==3.3.0",
    "elasticsearch==8.13.1",
    "elasticsearch-dsl==8.13.1",
    "environs==11.0.0",
    "fastapi==0.111",
    "injector==0.21.0",
    "pydantic==2.7.1",
    "pyjwt[crypto]==2.8.0",
    "python-json-logger==2.0.7",
    "sb-json-tools==0.10.2",
    "SQLAlchemy==2.0.30",
    "tabulate==0.9.0",
    "tqdm==4.66.4",
    "typer==0.18.*",
    "ulid-py==1.1.0",
    "urllib3==2.2.1",
    "asgi-matomo==0.6.0",
    "frozendict==2.4.4",
    "json-arrays==0.14.1",
    "uvicorn==0.18.3",
    "methodtools==0.4.7",
    "PyYAML==6.0.1",
]

[dependency-groups]
dev = [
    "pytest",
    "cryptography==42.0.7",
    "types-tabulate==0.9.0",
    "types-tqdm==4.66.0.5",
    "elasticsearch-test-py==1.2.0",
    "ruff",
    "basedpyright",
]

[project.scripts]
karp-cli = "karp.cliapp.main:cliapp"

[project.entry-points."karp.plugin"]
"link" = "karp.plugins.link_plugin:LinkPlugin"
"backlink" = "karp.plugins.backlink_plugin:BacklinkPlugin"
"resource" = "karp.plugins.resource_plugin:ResourcePlugin"
"copy" = "karp.plugins.copy_plugin:CopyPlugin"
"inflection" = "karp.plugins.inflection_plugin:InflectionPlugin"
"valency" = "karp.plugins.valency_expansion_plugin:ValencyPlugin"
"salex_forward_references" = "karp.plugins.salex_references_plugin:SalexForwardReferencesPlugin"
"salex_backward_references" = "karp.plugins.salex_references_plugin:SalexBackwardReferencesPlugin"
"salex_id_info" = "karp.plugins.salex_references_plugin:SalexIdInfoPlugin"
"salex_reference_info" = "karp.plugins.salex_references_plugin:SalexReferenceInfoPlugin"

[tool.uv]
package = true
