[project]
name = "karp"
version = "7.0.0"
license = "MIT"
description = "Karp backend"
readme = "README.md"
authors = [{ name = "Språkbanken Text", email = "sb-info@svenska.gu.se" }]
requires-python = ">=3.12"

dependencies = [
    "alembic==1.17.2",
    "asgi-matomo==0.6.0",
    "environs==14.5.0",
    "fastapi==0.123.7",
    "json-arrays==0.15.0",
    "opensearch-py",
    "pydantic==2.12.5",
    "pyjwt[crypto]==2.10.1",
    "PyMySQL==1.1.0",
    "PyYAML==6.0.1",
    "sb-json-tools",         # see tool.uv.sources farther down
    "SQLAlchemy==2.0.44",
    "TatSu==5.7.4",
    "typer==0.20.0",
    "ulid-py==1.1.0",
]

[dependency-groups]
prod = ["gunicorn>=25.1.0,<26.0.0", "uvloop>=0.22.1"]
sentence_transformers = ["sentence_transformers==5.6.0"]
dev = [
    "pytest",
    "cryptography==46.0.3",
    "elasticsearch-test-py==1.2.0",
    "ruff",
    "basedpyright",
]

[project.scripts]
karp-cli = "karp.cliapp.main:cliapp"

[project.entry-points."karp.plugin"]
"link" = "karp.plugins.link_plugin:LinkPlugin"
"backlink" = "karp.plugins.backlink_plugin:BacklinkPlugin"
"resource" = "karp.plugins.resource_plugin:ResourcePlugin"
"copy" = "karp.plugins.copy_plugin:CopyPlugin"
"inflection" = "karp.plugins.inflection_plugin:InflectionPlugin"
"valency" = "karp.plugins.valency_expansion_plugin:ValencyPlugin"
"salex_forward_references" = "karp.plugins.salex_references_plugin:SalexForwardReferencesPlugin"
"salex_backward_references" = "karp.plugins.salex_references_plugin:SalexBackwardReferencesPlugin"
"salex_id_info" = "karp.plugins.salex_references_plugin:SalexIdInfoPlugin"
"salex_reference_info" = "karp.plugins.salex_references_plugin:SalexReferenceInfoPlugin"
"salex_bertvectors" = "karp.plugins.salex_bertvector_plugin:BertVectorPlugin"
"salex_spellcheck" = "karp.plugins.salex_spellcheck_plugin:SalexSpellcheckPlugin"
"nearest_neighbours" = "karp.plugins.salex_bertvector_plugin:NearestNeighboursPlugin"
"npegl_segmentation" = "karp.plugins.npegl_segmentation_plugin:NpeglSegmentationPlugin"

[tool.uv]
package = true

[tool.uv.sources]
sb-json-tools = { git = "https://github.com/spraakbanken/python-json-tools.git" }
