[bumpversion]
current_version = 0.7.1
commit = True
tag = True
sign_tag = True

[metadata]
name = karp-tng-backend
license = MIT
description-file = README.md
description-content-type = text/markdown
author = Språkbanken at the University of Gothenburg
author_email = sb-info@svenska.gu.se
home-page = https://spraakbanken.gu.se
project_urls =
	Bug Tracker = https://github.com/spraakbanken/karp-tng-backend/issues
	Documentation = https://github.com/spraakbanken/karp-tng-backend
	Source Code = https://github.com/spraakbanken/karp-tng-backend
classifier =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: Unix
	Operating System :: POSIX
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Utilities

[files]
packages =
	karp
data_files =
	karp/doc = doc/karp_api_spec.yaml
# data_files =
# 	karp = schema/resourceconf.schema.json
# 	karp = auth/pubkey.pem

[entry_points]
console_scripts =
	karp-cli = karp.cli:cli

[extras]
elasticsearch6 =
	elasticsearch>=6,<7.0.0
	elasticsearch-dsl>=6,<7.0.0
elasticsearch7 =
	elasticsearch>=7,<8.0.0
	elasticsearch-dsl>=7,<8.0.0
dev =
	pysqlcipher3
	flake8
	elasticsearch-test-py
	pylint
	pylint-flask
	pytest
	pytest-cov
	pyre-check
	python-dotenv
	bump2version
	black
mysql =
	mysqlclient

[tool:pytest]
testpaths = tests
junit_family = xunit1

[coverage:run]
branch = true
source =
	karp

[pycodestyle]
max-line-length = 120

[flake8]
max-line-length = 120

[bumpversion:file:karp/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:doc/karp_api_spec.yaml]
search = version: {current_version}
replace = version: {new_version}
