[metadata]
name = karp-tng-backend
license = MIT
description-file = README.md
description-content-type = text/markdown
author = Språkbanken at the University of Gothenburg
author_email = sb-info@svenska.gu.se
home-page = https://spraakbanken.gu.se
project_urls =
	Bug Tracker = https://github.com/spraakbanken/karp-tng-backend/issues
	Documentation = https://github.com/spraakbanken/karp-tng-backend
	Source Code = https://github.com/spraakbanken/karp-tng-backend
classifier =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: Unix
	Operating System :: POSIX
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Utilities

[files]
packages =
	karp
# data_files =
# 	etc/karp = doc/karp_api_spec.yaml
# data_files =
# 	karp = schema/resourceconf.schema.json
# 	karp = auth/pubkey.pem

[entry_points]
console_scripts =
	karp-cli = karp.cliapp.main:cliapp
karp.modules =
    health = karp.webapp.views.health
    entries = karp.webapp.views.entries
    resources = karp.webapp.resources_api
	history = karp.webapp.views.history
	stats = karp.webapp.stats_api
	query = karp.webapp.query_api
karp.infrastructure =
	es6 = karp.infrastructure.elasticsearch6
    sql = karp.infrastructure.sql
	testing = karp.infrastructure.testing
	jwt = karp.infrastructure.jwt
karp.clicommands =
    entries = karp.cliapp.subapp_entries
	resource = karp.cliapp.subapp_resource

[extras]
elasticsearch6 =
	elasticsearch>=6,<7.0.0
	elasticsearch-dsl>=6,<7.0.0
elasticsearch7 =
	elasticsearch>=7,<8.0.0
	elasticsearch-dsl>=7,<8.0.0
dev =
	pysqlcipher3
	flake8
	elasticsearch-test-py
	pylint
	pytest
	pytest-cov
	pyre-check
	python-dotenv
	bump2version
	black
	mypy
	bandit
    factory-boy
mysql =
	pymysql

[tool:pytest]
testpaths = karp/tests
junit_family = xunit1

[coverage:run]
branch = true
source =
	karp
omit =
	karp/tests/*

[pycodestyle]
max-line-length = 120

[flake8]
max-line-length = 120
