[tool.poetry]
name = "karp-backend"
version = "6.2.0"
description = ""
authors = ["Kristoffer Andersson <kristoffer.andersson@gu.se>"]
license = "MIT"
readme = "README.md"
packages = [
	{ include = "karp", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
Deprecated = "^1.2.13"
PyMySQL = { version = "^1.0.2", optional = true }
TatSu = "^5.8.3"
aiomysql = { version = "^0.1.1", optional = true }
aiosqlite = { version = "^0.17.0", optional = true }
alembic = "^1.8.1"
asgi-correlation-id = "^3.0.1"
elasticsearch = "^6"
elasticsearch-dsl = "^6"
environs = "^9.3.4"
fastapi = "^0.89"
injector = "^0.20.1"
json-streams = "^0.12.0"
mysqlclient = { version = "^2.1.1", optional = true }
paradigmextract = "^0.1.1"
pydantic = "^1.10.2"
pyjwt = { version = "^2.6.0", extras = ["crypto"] }
python-dotenv = "^0.19.0"
python-json-logger = "^2.0.4"
regex = "^2022.8.17"
sb-json-tools = "^0.9.1"
sqlalchemy = "^1.4.44"
sqlalchemy-json = "^0.5.0"
sqlalchemy-utils = "^0.38.3"
tabulate = "^0.9.0"
tenacity = "^8.0.1"
tqdm = "^4.64.1"
typer = "^0.7.0"
ulid-py = "^1.1.0"
urllib3 = "^1.26.13"
karp-lex-core = ">=0.5.1"

[tool.poetry.scripts]
karp-cli = "karp.cliapp.main:cliapp"

[tool.poetry.extras]
mysql = ["mysqlclient", "PyMySQL", "aiomysql"]
sqlite = ["aiosqlite"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/spraakbanken/karp-backend/issues"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
bump2version = "^1.0.1"
pylint = "^2.15.10"
mypy = "^1.0.1"
uvicorn = "^0.18.3"
factory-boy = "^3.2.1"
cryptography = "^38.0.1"
types-tabulate = "^0.8.11"
vulture = "^2.5"
requests = "^2.28.1"
SQLAlchemy = { version = "^1.4.41", extras = ["mypy"] }
mkdocs = "^1.3.1"
mkdocs-material = "^8.5.6"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"
types-factory-boy = "^0.3.1"
types-deprecated = "^1.2.9"
httpx = "^0.23.1"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
ruff = "^0.0.243"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
