[tool.poetry]
name = "karp-lex-core"
version = "0.3.2"
description = "The core of karp-lex"
authors = [
    "Språkbanken at the University of Gothenburg <sb-info@svenska.gu.se>",
    "Kristoffer Andersson <kristoffer.andersson@gu.se>",
]
license = "MIT"
readme = "README.md"
homepage = "https://spraakbanken.gu.se"

documentation = "https://github.com/spraakbanken/karp-backend"
repository = "https://github.com/spraakbanken/karp-backend"
packages = [
    {include = "karp/lex_core", from = "src"},
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/spraakbanken/karp-backend/issues"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
ulid-py = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
bump2version = "^1.0.1"
pylint = "^2.15.10"
mypy = "^0.991"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
ruff = "^0.0.243"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
