[tool.poetry]
name = "karp-backend"
version = "6.1.12"
description = ""
authors = ["Kristoffer Andersson <kristoffer.andersson@gu.se>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "karp", from = "../.."},
    {include = "karp/karp_v6_api", from = "../../bases"},
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
