[tool.poetry]
name = "karp-lex-core"
version = "0.2.3"
description = "The core of karp-lex"
authors = [
    "Språkbanken at the University of Gothenburg <sb-info@svenska.gu.se>",
    "Kristoffer Andersson <kristoffer.andersson@gu.se>",
]
license = "MIT"
readme = "README.md"
homepage = "https://spraakbanken.gu.se"

documentation = "https://github.com/spraakbanken/karp-lex-core"
repository = "https://github.com/spraakbanken/karp-lex-core"
packages = [
    {include = "karp/lex_core", from = "../../bases"},
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/spraakbanken/karp-lex-core/issues"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
ulid-py = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
bump2version = "^1.0.1"
pylint = "^2.15.10"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
